@@ -11,6 +11,8 @@ PSXC-IMDB CHANGELOG:
 			      be fetched.
 			    - psxc-imdb: films with no rating/votes show incorrect values
 			      in IMDB banner.
+			    - psxc-imdb-rescan: psxc-imdb-rescan -r gives no or faulty
+			      psxcflags.
 - v2.9g - Oct. 01st, 2008 - another imdb layout change.
 - v2.9f - Sep. 16th, 2008 - imdb changed layout again. Fixed rating and votes bug that
 			     appeared because of it.
