@@ -56,6 +56,7 @@ v1.2.0  --> 1.2.x :
 		- Fixed bug #492 - psxc-symlink-maker.sh: sort_by_title for films starting with a
 		  dot or non-"A-Za-z0-9_\-()"-char.
 		- Fixed bug #487 - psxc-imdb.sh doesn't remove old IMDB banner when spaces present.
+		- Fixed bug #486 - psxc-imdb-rescan -r gives no or faulty psxcflags.
 		- Fixed bug #485 - zipscript-c --config prints ((void *)0) instead of DISABLED.
 		- Did some fixes in libcopy to overcome symlinks and old broken libs. Hopefully you
 		  no longer need to rm -fR all lib* dirs in /glftpd before running libcopy anymore.
